<resources>

    <string name="test_accessibility">为了程序正常运行请打开此服务</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Demo</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">存</string>

    <string name="load">读</string>

    <string name="id">ID:</string>

    <string name="firstname">FirstName:</string>

    <string name="lastname">LastName:</string>

    <string name="but1">公告</string>
    <string name="but2">观影</string>
    <string name="but3">个人</string>
    <string name="tongzhi">通知内容</string>
    <string name="title_activity_two">VIP天数查询与充值</string>
    <string name="chognzhi">充值</string>
    <string name="tishi">请输入激活码</string>
    <string name="exit">退出</string>
    <string name="title_activity_three">用户登录、注册</string>
    <string name="username">用户名</string>
    <string name="passwd">密码</string>
    <string name="reg">注册</string>
    <string name="logon">登录</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="play">播放</string>
    <string name="back">后退</string>
    <string name="forwk">前进</string>
    <string name="close">关闭</string>
    <string name="flush">刷新</string>
    <string name="genghuan">换线</string>

    <!--<string name="app_name">nRF Toolbox</string>-->
    <string name="font_path">fonts/trebucbd.ttf</string>
    <string name="normal_font_path">fonts/trebuc.ttf</string>

    <string name="shortcut_dfu_short">DFU</string>
    <string name="shortcut_dfu_long">Device Firmware Update</string>
    <string name="shortcut_uart_short">UART</string>
    <string name="shortcut_uart_long">Nordic UART Service</string>

    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>

    <string name="action_about">About</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="action_connect">CONNECT</string>
    <string name="action_select">SELECT DEVICE</string>
    <string name="action_add_device">ADD DEVICE</string>
    <string name="action_connecting">CONNECTING…</string>
    <string name="action_disconnect">DISCONNECT</string>
    <string name="action_disconnecting">DISCONNECTING…</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_plugins">PLUGINS</string>
    <string name="drawer_plugin_nrf_connect">nRF Connect</string>

    <string name="battery">%d%%</string>
    <string name="not_available">n/a</string>
    <string name="not_available_value">" - "</string>
    <string name="no_ble">Device doesn\'t have BLE support!</string>
    <string name="no_apps">No profiles found.</string>
    <string name="not_supported">The device does not have required services.</string>
    <string name="no_application">Web Browser application is not available.</string>
    <string name="no_uri_application">There is no application that can open this URI.</string>
    <string name="no_application_play">Google Play not installed.</string>
    <string name="no_required_permission">Permission denied.</string>
    <string name="scanner_title">Select device:</string>
    <string name="scanner_empty">No device found</string>
    <string name="scanner_action_scan">Scan</string>
    <string name="scanner_action_cancel">Cancel</string>
    <string name="scanner_subtitle_bonded">BONDED DEVICES:</string>
    <string name="scanner_subtitle_not_bonded">AVAILABLE DEVICES:</string>
    <string name="scanner_permission_rationale">Since Android 6.0 Marshmallow system requires granting access to device\'s location in order to scan for Bluetooth Smart devices. Bluetooth beacons may be used to determine the phone\'s and user\'s location.</string>

    <string name="log" formatted="false">%1$tR:%1$tS.%1$tL</string>

    <string name="permission_title">Permission required</string>
    <string name="permission_sd_text">nRF Toolbox would like to copy some sample applications, that may be uploaded onto your nRF51 device using the DFU (Device Firmware Update), to the memory of this device. If you agree, you will be asked to give the application permission to access files on your device.</string>
    <string name="about_title">About</string>
    <string name="about_version">\n\nVersion: %s</string>
    <string name="about_text">The nRF Toolbox is a container application that stores your Nordic Semiconductor apps in one location.</string>


    <!--会话界面-->
    <string name="please_to_talk">按住 说话</string>
    <string name="shot">拍摄</string>
    <string name="location">位置</string>
    <string name="red_pack">红包</string>
    <string name="wx_red_pack">微信红包</string>
    <string name="file_out_of_date">文件已过期</string>
    <string name="SET_TEXT_TYPING_TITLE">对方正在输入</string>
    <string name="SET_VOICE_TYPING_TITLE">对方正在讲话</string>
    <string name="send">发送</string>
    <string name="album">相册</string>


</resources>
