<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MM.BaseLlVertical">

    <ProgressBar
        android:id="@+id/pb_load_url"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:progressDrawable="@drawable/pg" />

    <WebView
        android:id="@+id/play_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/play_but1"
            android:layout_width="0sp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="play"
            android:scaleType="center"
            android:text="@string/play" />

        <Button
            android:id="@+id/play_but2"
            android:layout_width="0sp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="back"
            android:text="@string/back" />

        <Button
            android:id="@+id/play_but3"
            android:layout_width="0sp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="fork"
            android:text="@string/forwk"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/play_but4"
            android:layout_width="0sp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="tuichu"
            android:text="@string/close"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/play_but5"
            android:layout_width="0sp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="flush"
            android:text="@string/flush"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/play_but6"
            android:layout_width="0sp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:onClick="genghuan"
            android:text="@string/genghuan"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>